--- a/ex1/ServerAndHtml/templates/User.html
+++ b/ex1/ServerAndHtml/templates/User.html
@@ -52,10 +52,9 @@
                 </fieldset>
             </div>
         </div>
-        <!-- -------------------------------------------------------------------->
-<!--             <form>
-                <input type="button" name="ShowUsers" value="ShowUsers" onclick="lastRegisteredUser()">
-            </form> -->
+        <form action="/admin">
+            <button>На страницу Админов</button>
+        </form>
     <script src="http://dimsemenov.com/plugins/magnific-popup/dist/jquery.magnific-popup.min.js?v=0.9.9"></script>
     </body> 
 </html> 
