--- a/ex1/ServerAndHtml/templates/accountUser.html
+++ b/ex1/ServerAndHtml/templates/accountUser.html
@@ -35,13 +35,29 @@
     }
     function getPizza() {   
         $.get( "/user/getPizza", function( data ) {
-            $('#brd').empty()
-            $.each(data, function(k,v)  {
-                $("#brd").append("<tr><td>"+data[k].name+"<td><br/><td>"+data[k].price+"<td><br/></tr>");
+            $('#brd').empty();
+            $.each(data, function(k)  {
+                $("#brd").append("<tr id = 'remove'><td>"+data[k].name+"<td><br/><td>"+data[k].price+"<td><br/><button class='delete' data-pizza='"+data[k].name+"'><img src='https://img.icons8.com/color/16/000000/delete-sign.png'></button></tr>");
             });
             console.log(data);
         });
     }
+    $('#brd').on('click', '.delete', function() {   
+        var dataId = $(this).attr("data-id"); 
+        var name = $(this).attr("data-pizza"); 
+        console.log(name)
+        $.ajax({   
+            url: '/user/pizzaDelete',    
+            type: 'DELETE', 
+            data: JSON.stringify(name), 
+            contentType: "application/json; charset=utf-8",   
+            dataType: "json",   
+            success : function(data) {
+                console.log(data.name)
+            },
+        }); 
+        $("#remove").remove();
+    });
     //pop up
     $(document).ready(function() {
         $('.close').click(function() {
